# medicloud-streaming-rs

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  REVIEW_SUMMARY.md  build.rs  clippy.toml  docker-compose.yml  settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
proto/: livestream.proto
src/: main.rs  settings.rs
src/core/: context.rs  input.rs  mod.rs  output.rs  packet.rs  stream.rs
src/livestream/: events.rs  handlers.rs  mod.rs  port_allocator.rs  pull_stream.rs  service.rs  stream_info.rs
src/messaging/: handlers.rs  messages.rs  mod.rs
src/messaging/messages/: mod.rs  pull_stream_command.rs  stream_retrieved_response.rs
src/persistence/: minio.rs  redis.rs
src/services/: livestream.rs  mod.rs
