[package]
name = "medicloud-streaming-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = "0.11.8"
ffmpeg-sys-next = "8.0.1"
log = "0.4.28"
minio = "0.3.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "*"

[build-dependencies]
tonic-prost-build = "*"
