[package]
name = "medicloud-streaming-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = "0.11.8"
ffmpeg-sys-next = { version = "8.0.1", default-features = false, features = ["avcodec", "avformat"] }
openssl = "0.10"
log = "0.4.29"
minio = "0.3.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "*"
tokio-stream = { version = "0.1.18", features = ["sync", "fs"] }
async-stream = "0.3.6"

[build-dependencies]
tonic-prost-build = "*"
